fix a bug to remove overflow when no cards are present

--- a/src/Card/pages/Game.css
+++ b/src/Card/pages/Game.css
@@ -57,8 +57,8 @@
 
   max-width: 270px;
   display: flex;
-  flex-wrap: nowrap;
-  overflow-x: auto;
+  /* flex-wrap: nowrap; */
+  overflow: hidden;
   white-space: nowrap;
 }
 
